--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   cloud_firestore: 
   google_api_headers:  
   google_places_flutter: ^2.0.8
+  paypal_sdk: ^1.0.11
+  webview_flutter: ^4.10.0
+  geocoding: ^3.0.0
   
 
 dev_dependencies:
