--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,10 +13,11 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = '1.8'
     }
 
     defaultConfig {
@@ -44,6 +45,9 @@ flutter {
 }
 
 
-dependencies{}
+dependencies{
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.1.4"
+}
 
 apply plugin: "com.google.gms.google-services"
+
