--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.CALL_PHONE"/>
-
+<uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <application
         android:label="green_ride"
@@ -43,6 +43,9 @@
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyBk1wlKR68wI-IDMzsbLPf1YiEZCetZDHU"/>
+        <meta-data
+    android:name="com.google.firebase.messaging.default_notification_channel_id"
+    android:value="chat_channel"/>
         <meta-data android:name="android.permission.USE_BIOMETRIC" android:value="true"/>
         <meta-data
     android:name="flutterEmbedding"
