--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   geocoding: ^3.0.0
   url_launcher: ^6.3.1
   flutter_polyline_points: ^2.1.0
+  firebase_messaging: ^15.2.5
+  flutter_local_notifications: ^19.2.1
+  
 
 dev_dependencies:
   flutter_test:
